fix table sorting based on timestamp
- made charts and navbar responsive
- add horizontal scrolls to table though already responsive
- made navbar text responsive
- added pagination max 4 entries on page

--- a/src/styles/chart.css
+++ b/src/styles/chart.css
@@ -15,9 +15,9 @@
 	box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
 }
 
-.chart-wrapper h2 {
+.chart-wrapper h3 {
 	color: #fff;
-	font-size: 2rem; /* Default font size for h2 */
+	font-size:1.5rem; 
 }
 
 .chart-wrapper canvas {
@@ -39,7 +39,7 @@
 }
 
 /* Apply styles to the h2 element */
-.chart-wrapper.bar-chart h2 {
+.chart-wrapper.bar-chart h3 {
 	position: absolute;
 	top: 20px; /* Adjust the space from the top */
 	left: 30px; /* Adjust the space from the left */
